# si-ware-scratchpad

./: CMakeLists.txt  log1_asc.txt  partitions.csv  sdkconfig  shellSetup.sh
components/Bluetooth/: CMakeLists.txt  bluetoothManager.c  bluetoothManagerUtils.c
components/Bluetooth/include/: bluetoothManager.h  bluetoothManagerDefs.h  bluetoothManagerUtils.h  bluetoothManager_prv.h
components/CentralManager/: CMakeLists.txt  centralManager.c
components/CentralManager/include/: centralManager.h  centralManagerDefs.h  centralManagerErrorCodes.h  centralManagerSystemIOs.h  centralManager_priv.h
components/CommLayer/: CMakeLists.txt  commLayer.c
components/CommLayer/include/: commLayer.h
components/FileSystem/: CMakeLists.txt  fileSystem.c
components/FileSystem/include/: fileSystem.h  fileSystem_prv.h
components/FirmwareUpdate/: CMakeLists.txt  firmwareUpdate.c
components/FirmwareUpdate/include/: firmwareUpdate.h
components/NS_Sensor/: NS_operations.c  NS_sensor.c  NS_spiInterface.c
components/NS_Sensor/include/: NS_operations.h  NS_sensor.h  NS_spiInterface.h
components/OledInterface/: CMakeLists.txt  oledInterface.c  u8g2_hal.c
components/OledInterface/include/: icons.h  oledInterface.h  oledInterface_prv.h  u8g2_hal.h
components/PowerManagement/: CMakeLists.txt  charger_BQ25703A.c  gauge_BQ4050.c  powerManagement.c
components/PowerManagement/include/: charger_BQ25703A.h  gauge_BQ4050.h  powerManagement.h
components/Uart/: CMakeLists.txt  uartManager.c
components/Uart/include/: uartManager.h  uartManager_prv.h
main/: CMakeLists.txt  main.c
(+1 files in other folders)
